# c_triangles

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: osx_opengl.c  triangle_shader.h  win_opengl.c  win_vulkan.c
